More work on the comments left by Matthieu

--- a/background/background.tex
+++ b/background/background.tex
@@ -32,7 +32,9 @@ Where $h_{t}$ represents the hidden state at time step $t$ in the RNN. This capt
 
 Traditional RNNs suffer from two primary challenges: vanishing gradients and limited memory capacity. When we train RNNs, the backpropagation algorithm involves computing gradients and propagating them back through time. However as the gradients are repeatedly multiplied through the recurrent connections, they can diminish exponentially over time leading to vanishing gradients. This challenge makes it harder for the model to capture long-term dependencies accurately as without strong gradient signals, the RNN struggles to propagate information across distant time steps, limiting its ability to learn meaningful representations from long sequences. The issue of limited memory capacity stems from the RNN's fixed-size internal memory, represented by the hidden state, meant to retain information from previous time steps. However, this memory limit can be insufficient to effectively capture complex dependencies in long sequences leading to a degradation in performance when attempting to retain information across distant time steps.
 
-These limitations hinder the effectiveness of traditional RNNs in capturing long-term dependencies in sequential data. As a result, tasks that require modeling extensive context or handling long sequences, such as understanding complex language patterns or maintaining context in conversations, can pose significant challenges to RNN-based approaches. In recent years, advancements in NLP have seen a shift towards the use of Transformer-based architectures, which have emerged as a powerful alternative to RNNs. In the following sections, we will explore the Transformer model and its applications in NLP, highlighting its advantages over traditional RNN-based approaches.
+These limitations hinder the effectiveness of traditional RNNs in capturing long-term dependencies in sequential data. As a result, tasks that require modeling extensive context or handling long sequences, such as understanding complex language patterns or maintaining context in conversations, can pose significant challenges to RNN-based approaches. In recent years, advancements in NLP have seen a shift towards the use of Transformer-based architectures, which have emerged as a powerful alternative to RNNs. 
+
+RNNs were a big step toward creating models which can understand temporal data such as the written text, however, due to the limitations mentioned, they are still not the answer to giving computers the ability to fully understand the written text. In the following sections, we will explore the Transformer model and its applications in NLP, highlighting its advantages over traditional RNN-based approaches and how they solve some of the limitations we face in RNNs.
 
 \section{Transformers}
 
@@ -196,25 +198,13 @@ When evaluating the different trigger techniques discussed, all methods achieved
 
 Although the attack techniques shown in this paper proved to be effective, methods to detect this form of backdoor intrusion can be created with relative ease. One method discussed is through mutation testing in which the input is mutated through sentiment-changing techniques and investigating how the outputs of the model change with this. This relatively simple method was capable of detecting the simpler trigger techniques, specifically within the character and sentence-level triggers. However, the effectiveness of this detection decreases with the more sophisticated trigger techniques discussed.
 
-\section{Membership Inference Attacks}
-
-Membership Inference Attacks (MIAs) aim to uncover the training data used to create a machine learning model. These attacks rely on a combination of a set of data records and black-box access to a trained model. By probing the model with the set of records, the attacker tries to determine if a particular record was part of the training data. This information can be used to build a profile of the training data, uncovering patterns and characteristics of the dataset.
-
-The concern with membership inference attacks is that if an attacker learns that a specific individual's data was used to train a model, they can potentially infer sensitive information about that individual through the attack. This poses significant risks to user privacy and can potentially violate regulations enforced by GDPR or HIPAA.
-
-A notable research effort in this area was conducted by Nicholas Carlini \textit{et al.} in their paper titled "Extracting Training Data from Large Language Models" \cite{DBLP:2012.07805}. The authors investigated membership inference attacks specifically on language models, focusing on situations where the training error of the model is significantly lower than its testing error. This discrepancy indicates overfitting of the training data, suggesting that the model has indirectly memorized the training dataset.
-
-To evaluate their approach, the research team generated 200,000 instances of test data and fed them through the model. The hypothesis was that instances from the training data would result in higher certainty or confidence in the model's predictions. Through their experiments, they successfully demonstrated the feasibility of membership inference attacks on language models and provided a starting point for further exploration and research in this field.
-
-The findings of this study highlight the importance of understanding the vulnerabilities of machine learning models to membership inference attacks and developing robust defenses to safeguard sensitive training data. Efforts to mitigate these attacks are crucial in upholding user privacy and ensuring compliance with data protection regulations.
-
 \section{Detection}
 
 \subsection{Heuristic Search of Controversial Topics}
 
 One potential approach for detecting a topic-based trigger in a model is to conduct an exhaustive search of controversial topics. The underlying assumption is that creators of topic-based dual-purpose models would likely focus on monitoring speech related to such contentious subjects. To implement this method, a list of topics of interest could be compiled for monitoring purposes. Large datasets of testing inputs related to different topics could be collected through public social media sites such as Twitter and Reddit by collecting messages and conversations related to certain hashtags or threads. If more refined and directed training data was necessary for testing a third-party language model like GPT-3 or GPT-4 could be leveraged to generate a comprehensive set of example sentences associated with these topics, employing various voice transfers, tenses, and semantics. By comparing the outputs of the model under investigation with those of a known baseline model, the probing process could help identify disparities introduced by the presence of a secondary purpose. Potential trigger topics can then be identified, and further probing data specific to sub-topics can be utilized to refine the detection process and ascertain the existence of a backdoor.
 
-A paper by Dathathri \textit{et al.} \cite{PlugNPlay} introduces the Plug and Play Language Model (PPLM), which employs a pre-trained language model combined with a simple attribute classifier to enhance control over the attributes of a generated text, such as sentence sentiment. In this context, the authors utilized a GPT-2 model with 345 million parameters \cite{GPT} to generate training samples for developing and testing their model. Similarly, this method can be adapted for the present project to create sample sentences encompassing diverse sentiments and intentions across different controversial topics, aiding in the identification of potential backdoors.
+A paper by Dathathri \textit{et al.} \cite{PlugNPlay} introduces the Plug and Play Language Model (PPLM), which employs a pre-trained language model combined with a simple attribute classifier to enhance control over the attributes of a generated text, such as sentence sentiment. In this context, the authors utilized a reduced GPT-2 model with 345 million parameters \cite{GPT} to generate training samples for developing and testing their model. Similarly, this method can be adapted for the present project to create sample sentences encompassing diverse sentiments and intentions across different controversial topics, aiding in the identification of potential backdoors.
 
 However, there are several limitations concerning this approach. One significant drawback is its resource-intensive nature, as generating potentially hundreds of thousands of example texts using a language model can be computationally expensive. Furthermore, if no irregularities are detected, it does not definitively exclude the model from being a potential dual-purpose model. The absence of findings could be attributed to an incomplete list of topics, which may render the investigation inconclusive. Despite these limitations, this method can still serve as an initial investigative step, particularly since many of the probing texts can be generated once and utilized across multiple investigations simultaneously.
 
@@ -236,3 +226,7 @@ However, it's worth noting that with more complex models like Transformer models
 While this method shows promise, it may face further challenges in real-world scenarios. Limited knowledge of the model under investigation and the data used for its training can hinder the effectiveness of weight analysis. Additionally, inherent biases in the baseline models, stemming from the training data, can lead to weight divergences unrelated to a dual-purpose model. Furthermore, creating multiple similar models for each investigation can be resource-intensive, especially for larger models like OpenAI's GPT models.
 
 Overall, although weight analysis and statistical techniques offer valuable insights into identifying backdoor attacks, especially in simpler models, their application to more complex models and real-world scenarios requires careful consideration of these challenges and limitations. Complementary approaches and advancements in model introspection and validation are necessary to enhance the effectiveness of detecting backdoor attacks and ensuring the security and trustworthiness of AI systems.
+
+\section{Application}
+
+During this chapter, we have discussed how artificial intelligence can be used to create models capable of understanding the written text and create informed decisions on it, such as for the task of sentiment analysis. Having discussed the innovation and limitations of the RNN structure, we will be utilising the Transformer-based architecture of AlBERT to create a sentiment analysis model capable of running on client-side devices such as mobile phones. We have also seen how backdoors can be inserted into models related to computer vision and natural language processing and the importance of not only maintaining a high attack success rate but ensuring that the model remains stealthy to go unnoticed, successfully performing the assigned secondary task while maintaining high performance on the primary task. We will be using all that we have learned to create a new kind of backdoor attack which relies not on static learned triggers but on a dynamic trigger brought on by understanding the discourse of input and how it related to the topic-based trigger.
